# nQueens

./: .gitignore  .hlint.yaml  Main.hs  README.md  bench.html  flake.nix  hie.yaml  nQueens.cabal  space.md
.devcontainer/: devcontainer.json
bench/space/: Main.hs
bench/time/: Main.hs
src/: NQueens.hs
src/NQueens/: BacktrackingSearch.hs  BetterList.hs  NaiveList.hs  Pretty.hs  Types.hs  Utils.hs
test/: Main.hs
test/Spec/: BacktrackingSearch.hs  BetterList.hs  NaiveList.hs
